# odoo-bringout-new_apikey_nopassword

./: README.md  pyproject.toml
doc/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
new_apikey_nopassword/: SPEC.md  __init__.py  __manifest__.py
new_apikey_nopassword/i18n/: bs.po  new_apikey_nopassword.pot
new_apikey_nopassword/models/: __init__.py  res_users.py
new_apikey_nopassword/static/src/js/: new_apikey_service.js
